# mse-progalg

./: .gitignore  CMakeLists.txt  Exercises.sln  README.md  vscode.sh
01_C++/: 01_C++.vcxproj  01_C++.vcxproj.filters  CMakeLists.txt  checkresult.h  findmax.cpp  main.cpp  rangequery.cpp  summation.cpp
04_OpenMP/: 04_OpenMP.vcxproj  04_OpenMP.vcxproj.filters  CMakeLists.txt  main.cpp  matrixRowSorting.cpp  summation.cpp
05_Sorting/: 05_Sorting.vcxproj  05_Sorting.vcxproj.filters  CMakeLists.txt  bitonicsort.cpp  checkresult.h  main.cpp  quicksort.cpp
06_TaskMapping/: 06_TaskMapping.vcxproj  06_TaskMapping.vcxproj.filters  CMakeLists.txt  DFSearcher.cpp  DFSearcher.h  Node.h  Process.h  Task.h  TaskGraph.cpp  TaskGraph.h  main.cpp
08_MPI/: 08_MPI.vcxproj  08_MPI.vcxproj.filters  CMakeLists.txt  mainMPI.cpp
09_MPI_Collective/: 09_MPI_Collective.vcxproj  CMakeLists.txt  mainMPI.cpp
10_MPI_Sorting/: 10_MPI_Sorting.vcxproj  10_MPI_Sorting.vcxproj.filters  CMakeLists.txt  OddEvenSort.cpp  ShellSort.cpp  mainMPI.cpp
11_MPI_Numeric/: 11_MPI_Numeric.vcxproj  11_MPI_Numeric.vcxproj.filters  CMakeLists.txt  Cannon.cpp  Integration.cpp  checkresult.h  mainMPI.cpp  matrixmult.cpp
12_SYCL/: 12_SYCL.vcxproj  12_SYCL.vcxproj.filters  CMakeLists.txt  main.cpp  matrixmult.cpp  vectoradd.cpp
13_ImageProcessing/: 13_ImageProcessing.vcxproj  13_ImageProcessing.vcxproj.filters  CMakeLists.txt  imageprocessing.cpp  main.cpp
FreeImage/: FreeImage.vcxitems
FreeImage/Windows_x64/: FreeImage.lib  FreeImagePlus.lib
Stopwatch/: Stopwatch.h
cmake/: FindFreeImage.cmake  FindFreeImagePlus.cmake
